objects/SML_Account_Attachments__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Game Attachments</relationshipLabel>
        <relationshipName>SML_Account_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_since_creation__c</fullName>
        <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_modification__c</fullName>
        <formula>TODAY()  -  datevalue (LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last modification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Game Attachments</relationshipLabel>
        <relationshipName>SML_Account_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Solution_Category__c</referenceTo>
        <relationshipName>SML_Account_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>Business Discovery Workshop</fullName>
                </value>
                <value>
                    <fullName>Call Plan</fullName>
                </value>
                <value>
                    <fullName>Close Plan</fullName>
                </value>
                <value>
                    <fullName>Customer Success Plan - (External CSM)</fullName>
                </value>
                <value>
                    <fullName>Deal Clinic</fullName>
                </value>
                <value>
                    <fullName>Organizational Chart</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Business Plan</fullName>
                </value>
                <value>
                    <fullName>Qualification Criteria</fullName>
                </value>
                <value>
                    <fullName>Success Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Game Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SML Account Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>